# pbpipes

./: .gitignore  CMakeLists.txt  README.md  driver.conf  pom.xml  protoc.sh
bigquery-schema/: .gitignore  CMakeLists.txt  protoc-gen-bigquery-schema.sh  protoc.sh  test_generate.sh
bigquery-schema/pbpipes/: bigquery_schema_generator.cc
bigquery-schema/pbpipes/proto/: bigquery_schema.pb.cc
bigquery-schema/pbpipes/testdata/: test.proto
pbpipes/: bigquery_schema_generator.h  driver.cpp  driver.h  driver_main.cpp  executor.cpp  executor.h  executor_main.cpp  file_stream.cpp  file_stream.h  hbase_stream.cpp  hbase_stream.h  protoc-gen-bigquery-schema.cc  stream.h  utils.cpp  utils.h
pbpipes/hbase/: hbase_manager.h
pbpipes/proto/: bigquery_schema.pb.h  bigquery_schema.proto
pbpipestest/: bar_table.bigquery.json
proto/: pbpipes.grpc.pb.cc  pbpipes.grpc.pb.h  pbpipes.pb.cc  pbpipes.pb.h  pbpipes.proto  pbpipes_pb2.py
scripts/: protoc.sh  thrift.sh
src/main/java/io/lefty/pbpipes/: BigQueryJsonFormat.java  EnhancedJsonFormat.java  FieldMaskTree.java  FieldMaskUtil.java  TimeUtil.java
src/main/java/pbpipes/proto/: BigquerySchema.java
